Ginの開発環境を構築。

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,10 @@
-FROM golang:1.10.2
+FROM golang:latest
 
-WORKDIR /go/src
-ADD ./src /go/src
+RUN go get -u github.com/gin-gonic/gin
+
+WORKDIR /go/src/server
+ADD ./src /go/src/server
+
+EXPOSE 3000
+
+CMD ["go", "run", "main.go"]
