--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,13 @@
 FROM golang:latest
 
-RUN go get -u github.com/gin-gonic/gin
+RUN go get -u github.com/gin-gonic/gin && \
+    go get github.com/oxequa/realize
 
 WORKDIR /go/src/server
 ADD ./src /go/src/server
 
+RUN go build -o /bin/server.out .
+
 EXPOSE 3000
 
-CMD ["go", "run", "main.go"]
+CMD ["/bin/server.out"]
